Add steps needed to cook dish and picture of dish

--- a/recipes/porkchops.html
+++ b/recipes/porkchops.html
@@ -8,7 +8,25 @@
 
 <body>
     <h1>Horseradish Pork Chops</h1>
-
+    <img src="../images/pork_chop_img.jpeg" alt="Pork Chop Dish">
+    <p>Pork chops with a creamy horseradish topping.
+        Delicious and easy but not low fat. We always serve with wild rice and
+        green beans on the side.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 boneless porkchops</li>
+        <li>1/4 cup melted butter</li>
+        <li>1/4 cup dry bread crumbs</li>
+        <li>1/4 cup prepared horseradish</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 350 degrees F</li>
+        <li>Grease 9x13 baking Dish</li>
+        <li>Place pork chops into prepared baking dish. Mix together other
+            Ingredients. Press mixture onto earch chop.</li>
+        <li>Bake in preheated oven for 45 minutes</li>
+    </ol>
 </body>
 
 </html>
