--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <h2>Horseradish Pork Chops</h2>
             <a href="recipes/porkchops.html">Horseradish Porkchops</a>
         </li>
+        <li>
+            <h2>Beef and Broccoli</h2>
+            <a href="recipes/Beef_Broccoli.html">Beef and Broccoli</a>
+        </li>
     </ul>
 
 </body>
