--- a/recipes/porkchops.html
+++ b/recipes/porkchops.html
@@ -24,7 +24,7 @@
         <li>Preheat oven to 350 degrees F</li>
         <li>Grease 9x13 baking Dish</li>
         <li>Place pork chops into prepared baking dish. Mix together other
-            Ingredients. Press mixture onto earch chop.</li>
+            Ingredients. Press mixture onto each chop.</li>
         <li>Bake in preheated oven for 45 minutes</li>
     </ol>
 </body>
